# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  bash  env_variables.c  execution.c  exit.c  file  history.c  main.c  minishell  minishell_history.txt  own_shell  script.sh
includes/: minishell.h  parseader.h  readline.h
libft/: Makefile
libft/gnl/: get_next_line.c  get_next_line_utils.c
libft/includes/: get_next_line.h  libasm.h  libft.h
libft/libasm/: ft_read.s  ft_strcmp.s  ft_strcpy.s  ft_strdup.s  ft_strlen.s  ft_write.s
libft/srcs/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_numlen.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_putunbr.c  ft_realloc.c  ft_split.c  ft_str_is_numeric.c  (+24 more)
parser/: args.c  begin.c  env_parser.c  env_parser2.c  envs.c  helpers.c  line_parser.c  line_parser2.c  locations.c  main.c  parseader.h  path_parser.c  pipes.c  quotes.c  redirectors.c  redirlist_utils.c  spaces.c  splitters.c  strings.c  utils.c  validators.c
parserv2/: env_parser2.c  line_parser.c  line_parser2.c  path_parser.c  redirects.c  strings.c  validators.c
processor/: append_line.c  argslist_utils.c  buildin.c  cd.c  echo.c  echo_n.c  env.c  envir_var.c  envslist_utils.c  execution.c  exit.c  export.c  export_utils.c  find_fd.c  for_test.c  get_cols.c  history.c  keys.c  listjob.c  proc_utils.c  pwd.c  readline.c  reset.c  signals.c  terminal_management.c  unset.c  utils.c
